# wikigame-agent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MODEL_PRICES.md  Makefile  NOTICE  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  model-prices.yml  pr-title.yml  publish.yml  release-please.yml
scripts/: check_model_prices.py
src/wikigame_agent/: __init__.py  agents.py  cli.py  config.py  display.py  game.py  pricing.py  prompts.py  tools.py  wiki_client.py
src/wikigame_agent/data/: model_prices.json
tests/: conftest.py  test_agents.py  test_cli.py  test_display.py  test_game.py  test_pricing.py  test_tools.py  test_wiki_client.py
