[project]
name = "wikigame-agent"
version = "0.5.0"
description = "Wiki Game LLM agent built on AISI Inspect."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Yariv Barsheshat", email = "yariv@barsheshat.com" }]
keywords = ["llm", "agents", "wikipedia", "inspect-ai", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "inspect-ai>=0.3.50",
    "openai>=1.56.1",
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "rich>=13.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[project.scripts]
wikigame = "wikigame_agent.cli:app"

[project.urls]
Homepage = "https://github.com/yarv/wikigame-agent"
Repository = "https://github.com/yarv/wikigame-agent"
Issues = "https://github.com/yarv/wikigame-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wikigame_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
